scss-css/base/form/form-elements.scss
 @import "../../mixins/mixins";

.form-text {
  &::-ms-expand {
    border: 0;
    background-color: transparent;
  }
  &[disabled],
  &[readonly],
  fieldset[disabled] & {
    opacity: 1;
  }
  &[disabled],
  fieldset[disabled] & {
    cursor: not-allowed;
  }
  textarea {
    height: auto;
  }
}

// Help text
// Apply to any element you wish to create light text for placement immediately
// below a form control. Use for general help, formatting, or instructional text.
.form-item > .description {
  display: block; // account for any element using help-block
  margin-top: 5px;
  margin-bottom: 10px;
}

.form-wrapper:not(.form-actions) {
  > * {margin: 24px 0;}
}

.webform-element-help {
  background: none;
  border: 0;
  height: 44px;
  margin: 0;
  position: relative;
  width: 44px;
  vertical-align: middle;
  &::before {
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%,-50%);
  }
  &:hover {
    background: none;
    border: 0;
    &:focus {outline: none;}
  }
  &:focus {
    background: none;
    border: 0;
  }
  &:active {
    background: none;
    border: 0;
    &:focus {outline: none;}
  }
}

.webform-progress-tracker {
  .progress-step {
    .progress-marker {
      &::before {
        height: 44px;
        @include transition("background-color, border-color, color");
        width: 44px;
      }
    }
    .progress-marker[role="link"] {
      cursor: pointer;
      &:hover {
        &:focus::before {outline: none;}
      }
      &:focus {
        outline: none;
      }
      &:active {
        &:focus::before {outline: none;}
      }
    }
  }
}
.webform-scale-options input {
  + label {
    border: 0;
    border-radius: 0px;
    font-size: initial;
    line-height: initial;
    height: auto;
    width: auto;
  }
  &:focus + label {
    box-shadow: none !important;
  }
}

